# DynoCall

./: CMakeLists.txt  README.md
include/: back_inserter.h  export.h  memory_injection.h
lib/Debug/: DynoCallLib.exp  DynoCallLib.lib
lib/Release/: DynoCallLib.exp
src/: dynocall.cpp  dynocall_lib.cpp
